--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,14 +1,12 @@
+body{
+  //font-family: 'Lato', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+}
 .container{
   max-width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
   margin: 0 auto;
-  @media (max-width: 992px) {
-    max-width: 768px;
-  }
-  @media (max-width: 768px){
-    max-width: 640px;
-  }
 }
 a{
   text-decoration: none;
