--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,4 +1,7 @@
-$main-color: #4E4E4E;
-$posts-link-color: #7C7C7C;
-$posts-text-color: #5C5C5C;
-$footer-color:#B9B9B9;
+$main-color-light: #fff;
+$main-color-purple-light: #8D81AC;
+$main-color-purple-dark: #635C73;
+$main-color-dark: #323232;
+$main-color-gray: #848E97;
+$main-color-purple-lighter: #A291A5;
+
