--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,4 +4,6 @@
 @import "./base";
 @import "./header";
 @import "./intro";
+@import "./revolutionary-editor";
+@import "./features";
 @import "./reviews";
