--- a/src/scss/pricing.scss
+++ b/src/scss/pricing.scss
@@ -14,6 +14,8 @@
   display: flex;
   justify-content: center;
   gap: 15px;
+  margin-top: 100px;
+  align-items: center;
 }
 .pricing__price-item {
   width: 257px;
@@ -68,7 +70,6 @@
   line-height: 18px;
   color: #ffffff;
   margin-top: 80px;
-  margin-bottom: 60px;
 }
 .pricing__price-item-link {
   font-weight: 400;
@@ -80,5 +81,21 @@
   border-radius: 25px;
   padding: 15px 25px;
   background: rgba(255, 255, 255, 0.15);
-  margin-top: 60px;
 }
+.recommended {
+  width: 299px;
+  height: 560px;
+}
+// .btn {
+//   font-weight: 400;
+//   font-size: 15px;
+//   line-height: 15px;
+//   text-transform: uppercase;
+//   color: #ffffff;
+//   margin-top: 10px;
+//   border-radius: 25px;
+//   padding: 15px 25px;
+//   background: rgba(255, 255, 255, 0.15);
+//   border: none;
+//   cursor: pointer;
+// }
