--- a/src/scss/intro.scss
+++ b/src/scss/intro.scss
@@ -1,6 +1,7 @@
 .intro{
   background-image: url("../img/intro-bgd.png");
   background-size: cover;
+  background-position: center;
   padding-top: 183px;
   padding-bottom: 459px;
   text-align: center;
