--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -10,7 +10,6 @@
 }
 .page-header__nav{
   display: flex;
-
 }
 .logo{
   font-weight: 700;
@@ -22,20 +21,20 @@
 align-items: center;
   &:hover{
     color: $main-color-light;
+    .logo__image{
+      display: block;
+    }
+    .logo__image-color{
+      display: none;
+    }
   }
 }
 .logo__image{
   display: none;
   margin-right: 17px;
-  &:hover{
-    display: block;
-  }
 }
 .logo__image-color{
   margin-right: 17px;
-  &:hover{
-display: none;
-  }
 }
 .navigation__list{
   display: flex;
