--- a/src/scss/revolutionary-editor.scss
+++ b/src/scss/revolutionary-editor.scss
@@ -1,23 +1,25 @@
 .revolutionary-editor {
   text-align: center;
 }
+
 .revolutionary-editor__title {
   font-weight: 700;
   font-size: 54px;
   line-height: 54px;
   text-transform: uppercase;
-  color: #635c73;
+  color: $main-color-purple-dark;
+
   padding-top: 130px;
-  @media (max-width: 768px) {
-    font-size: 42px;
-    line-height: 42px;
-  }
+  // @media (max-width: 768px) {
+  //   font-size: 42px;
+  //   line-height: 42px;
+  // }
 }
 .revolutionary-editor__info {
   font-weight: 400;
   font-size: 21px;
   line-height: 32px;
-  color: #323232;
+  color: $main-color-dark;
 }
 .revolutionary-editor__list {
   display: flex;
@@ -28,33 +30,11 @@
   gap: 10px;
   margin-bottom: 70px;
 }
-.revolutionary-editor__item-link {
-  text-decoration: none;
+.revolutionary-editor__item {
+  display: flex;
+  align-items: center;
 }
-.revolutionary-editor__item-name {
-  padding: 3px 10px;
-  border: 1px solid rgba(27, 31, 35, 0.2);
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 20px;
-  color: #24292e;
-  border-radius: 5px 0px 0 5px;
-  float: left;
-  background-color: #f4f4f4;
-}
-.revolutionary-editor__item-img {
+.revolutionary-editor__item-link-svg {
   display: inline-block;
   vertical-align: middle;
-  margin-right: 5px;
-}
-.revolutionary-editor__item-rank {
-  padding: 3px 10px;
-  font-size: 12px;
-  font-weight: 600;
-  line-height: 20px;
-  border: 1px solid rgba(27, 31, 35, 0.2);
-  color: #24292e;
-  float: left;
-  border-radius: 0 5px 5px 0;
-  border-left: none;
 }
