--- a/src/scss/reviews.scss
+++ b/src/scss/reviews.scss
@@ -5,12 +5,18 @@
   padding-bottom: 29px;
   text-align: center;
 color: $main-color-light;
+  @media (max-width: 992px) {
+    padding-top: 86px;
+  }
 }
 .reviews__title{
   font-weight: 700;
   font-size: 48px;
   line-height: 50px;
   margin-bottom: 82px;
+  @media (max-width: 992px) {
+    margin-bottom: 87px;
+  }
 }
 .reviews__list{
   display: grid;
@@ -19,6 +25,11 @@ color: $main-color-light;
   column-gap: 93px;
   padding-left: 0;
   margin: 0;
+  @media (max-width: 992px) {
+    grid-template-columns: 1fr 1fr;
+    row-gap: 60px;
+    column-gap: 70px;
+  }
 }
 .reviews__img{
   margin: 0 auto;
@@ -37,6 +48,7 @@ color: $main-color-light;
   max-width: 887px;
 }
 .reviews__description{
+  position: relative;
   margin-top: 119px;
   margin-bottom: 19px;
   font-weight: 400;
@@ -52,7 +64,10 @@ color: $main-color-light;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    bottom: -195%;
+    bottom: -18px;
+    @media (max-width: 992px) {
+      width: 555px;
+    }
   }
 }
 
