--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -7,6 +7,9 @@ body{
   padding-left: 10px;
   padding-right: 10px;
   margin: 0 auto;
+  @media (max-width: 992px){
+    max-width: 992px;
+  }
 }
 a{
   text-decoration: none;
