--- a/src/scss/reviews.scss
+++ b/src/scss/reviews.scss
@@ -5,12 +5,21 @@
   padding-bottom: 29px;
   text-align: center;
 color: $main-color-light;
+  @media (max-width: 992px){
+    padding-top: 86px;
+    padding-bottom: 20px;
+  }
 }
 .reviews__title{
   font-weight: 700;
   font-size: 48px;
   line-height: 50px;
   margin-bottom: 82px;
+  @media (max-width: 992px){
+    margin-bottom: 88px;
+    font-size: 42px;
+    line-height: 44px;
+  }
 }
 .reviews__list{
   display: grid;
@@ -19,9 +28,18 @@ color: $main-color-light;
   column-gap: 93px;
   padding-left: 0;
   margin: 0;
+  @media (max-width: 992px){
+    grid-template-columns: 1fr 1fr;
+    row-gap: 65px;
+    column-gap: 73px;
+  }
 }
 .reviews__img{
   margin: 0 auto;
+  @media (max-width: 992px){
+    height: 50px;
+    margin-bottom: 30px;
+  }
 }
 .reviews__text{
   font-weight: 700;
@@ -44,6 +62,7 @@ color: $main-color-light;
   line-height: 21px;
   color: $main-color-purple-lighter;
   font-family: 'Lato', sans-serif;
+  position: relative;
   &::after{
     content: "";
     width: 780px;
@@ -52,7 +71,10 @@ color: $main-color-light;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    bottom: -195%;
+    bottom: -18px;
+  }
+  @media (max-width: 992px){
+    margin-top: 68px;
   }
 }
 
