--- a/src/scss/reviews.scss
+++ b/src/scss/reviews.scss
@@ -72,6 +72,9 @@ color: $main-color-light;
     left: 50%;
     transform: translateX(-50%);
     bottom: -18px;
+    @media (max-width: 992px){
+      width: 555px;
+    }
   }
   @media (max-width: 992px){
     margin-top: 68px;
