--- a/src/scss/pricing.scss
+++ b/src/scss/pricing.scss
@@ -2,6 +2,7 @@
   background: url(../img/background-pricing.png) center/cover no-repeat;
   height: 1000px;
   text-align: center;
+  padding-top: 80px;
 }
 .pricing__title {
   font-weight: 700;
@@ -18,6 +19,7 @@
 }
 .pricing__item {
   border: 1px solid yellow;
+  background: #6f5761;
 }
 .pricing__item-title {
   font-weight: 400;
@@ -25,13 +27,18 @@
   line-height: 24px;
   text-transform: uppercase;
   color: $main-color-light;
+  background: #7a6c7a;
+  padding-top: 35px;
+  padding-bottom: 35px;
+  margin: 0;
 }
 .pricing__item-price {
-  font-weight: 400;
+  font-weight: 700;
   font-size: 60px;
   line-height: 90px;
   text-transform: uppercase;
   color: $main-color-light;
+  margin: 0;
 }
 .pricing__item-month {
   font-weight: 400;
@@ -39,12 +46,25 @@
   line-height: 16px;
   text-transform: uppercase;
   color: $main-color-light;
+  padding-bottom: 70px;
+
+  position: relative;
+
+  &::before {
+    content: "";
+    width: 60px;
+    height: 5px;
+    background: #8d81ac;
+    position: absolute;
+    top: 35px;
+    left: 55px;
+  }
 }
 .pricing__item-licence {
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
-  text-transform: uppercase;
+
   color: $main-color-light;
 }
 .pricing__item-link {
