--- a/src/scss/features.scss
+++ b/src/scss/features.scss
@@ -1,15 +1,25 @@
-.features {
-  background: url(./dist/img/features/background-features.png);
+.container {
+  width: 1200px;
+  margin: 0 auto;
 }
-.features__container {
-  // display: flex;
+.features {
+  background: #f4f4f4;
+}
+.container_features {
+  display: grid;
+  padding-top: 100px;
+
+  grid-template-areas:
+    "items-list title"
+    "items-list image";
 }
 .features__title {
   font-weight: 700;
   font-size: 48px;
   line-height: 50px;
-  color: $main-color-purple-light;
-  // order: 1;
+  color: #8d81ac;
+  padding-left: 20px;
+  margin: 0;
 
   &::before {
     content: "<";
@@ -18,26 +28,36 @@
     content: ">";
   }
 }
-.features__list {
-  padding-left: 0;
-  width: 540px;
-  // height: 110px;
-}
-.features__item {
+.features__web-list {
   display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding-left: 0;
+  gap: 35px;
+  grid-area: items-list;
 }
-.features__img-box {
-  width: 100px;
+.features__web-item {
+  display: flex;
+  list-style: none;
+  padding-left: 0;
 }
-.features__item-img {
+.features__web-img {
+  // padding-right: 20px;
 }
-.features__item-box {
-}
-.features__item-box-title {
+.features__web-item-title {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  color: #323232;
   margin: 0;
 }
-.features__item-box-info {
+
+.features__web-item-info {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  color: #848e97;
 }
-.features__footer {
-  // order: 2;
+.features__img {
+  grid-area: image;
 }
