--- a/src/scss/pricing.scss
+++ b/src/scss/pricing.scss
@@ -1,6 +1,5 @@
 .pricing {
   background: url(../img/background-pricing.png) center/cover no-repeat;
-  height: 1000px;
   text-align: center;
   padding-top: 80px;
 }
@@ -14,13 +13,17 @@
 .pricing__list {
   display: flex;
   justify-content: center;
+  align-items: center;
   padding-left: 0;
   gap: 15px;
 }
 .pricing__item {
-  border: 1px solid yellow;
   background: #6f5761;
+  width: 257px;
+  height: 457px;
+  margin-top: 100px;
 }
+
 .pricing__item-title {
   font-weight: 400;
   font-size: 24px;
@@ -57,15 +60,19 @@
     background: #8d81ac;
     position: absolute;
     top: 35px;
-    left: 55px;
+    left: 40%;
   }
 }
 .pricing__item-licence {
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
-
   color: $main-color-light;
+
+  width: 210px;
+  height: 44px;
+  margin-left: 25px;
+  margin-bottom: 35px;
 }
 .pricing__item-link {
   font-weight: 400;
@@ -73,9 +80,35 @@
   line-height: 15px;
   text-transform: uppercase;
   color: $main-color-light;
+  background: #7a6c7a;
 
   padding: 15px 37px;
   border-radius: 30px;
-  border: 1px solid gold;
+
   margin-bottom: 10px;
+}
+.item-correct {
+  width: 299px;
+  height: 560px;
+  background: #463048;
+  mix-blend-mode: normal;
+  opacity: 0.84;
+}
+
+.correct-title {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background: #3f2c41;
+}
+
+.correct-price {
+  font-size: 82px;
+  margin-top: 15px;
+}
+.correct-licence {
+  margin-left: 50px;
+  margin-bottom: 100px;
+}
+
+.correct-link {
 }
