--- a/src/scss/pricing.scss
+++ b/src/scss/pricing.scss
@@ -11,17 +11,30 @@
   color: $main-color-light;
 }
 .pricing__list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
   padding-left: 0;
   gap: 15px;
+  margin-top: 100px;
+  padding-bottom: 100px;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  align-items: center;
+  justify-items: center;
+
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 .pricing__item {
   background: #6f5761;
   width: 257px;
   height: 457px;
-  margin-top: 100px;
+  // @media (max-width: 768px) {
+  //   height: ;
+  // }
 }
 
 .pricing__item-title {
