--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -7,6 +7,10 @@ body {
   padding-left: 10px;
   padding-right: 10px;
   margin: 0 auto;
+
+  // @media (max-width: 992) {
+  //   min-width: 768px;
+  // }
   @media (max-width: 480px) {
     min-width: 320px;
   }
