--- a/src/scss/pricing.scss
+++ b/src/scss/pricing.scss
@@ -9,6 +9,11 @@
   line-height: 50px;
   margin: 0;
   color: $main-color-light;
+
+  @media (max-width: 480px) {
+    font-size: 26px;
+    line-height: 28px;
+  }
 }
 .pricing__list {
   // display: flex;
@@ -26,6 +31,10 @@
 
   @media (max-width: 768px) {
     grid-template-columns: 1fr 1fr;
+  }
+  @media (max-width: 480px) {
+    grid-template-columns: 1fr;
+    margin-top: 30px;
   }
 }
 .pricing__item {
