--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -123,6 +123,7 @@
   font-size: 16px;
   line-height: 17px;
   margin-left: auto;
+  cursor: pointer;
   @media (max-width: 480px) {
     padding: 11px 10px;
     font-size: 15px;
