--- a/src/scss/revolutionary-editor.scss
+++ b/src/scss/revolutionary-editor.scss
@@ -1,5 +1,15 @@
 .revolutionary-editor {
   text-align: center;
+  padding-top: 129px;
+  padding-bottom: 70px;
+  @media (max-width: 480px){
+    padding-top: 130px;
+    padding-bottom: 98px;
+  }
+  @media (max-width: 992px){
+    padding-top: 156px;
+    padding-bottom: 88px;
+  }
 }
 .revolutionary-editor__title {
   font-weight: 700;
@@ -7,22 +17,33 @@
   line-height: 54px;
   text-transform: uppercase;
   color: $main-color-purple-dark;
-  padding-top: 130px;
-
+  margin-top: 0;
+  margin-bottom: 35px;
   @media (max-width: 480px) {
     font-size: 26px;
     line-height: 28px;
-    padding-top: 80px;
+  }
+  @media (max-width: 992px){
+    font-size: 42px;
+    line-height: 42px;
   }
 }
 .revolutionary-editor__info {
   font-weight: 400;
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
   font-size: 21px;
   line-height: 32px;
   color: $main-color-dark;
+  margin-top: 0;
+  margin-bottom: 13px;
+  @media (max-width: 992px){
+    margin-bottom: 24px;
+  }
   @media (max-width: 480px) {
     font-size: 14px;
     line-height: 20px;
+    margin-bottom: 36px;
   }
 }
 .revolutionary-editor__list {
@@ -32,7 +53,7 @@
   list-style: none;
   padding-left: 0;
   gap: 10px;
-  margin-bottom: 70px;
+  margin-top: 0;
 }
 .revolutionary-editor__item {
   display: flex;
@@ -57,7 +78,6 @@
   font-weight: 700;
   font-size: 12px;
   line-height: 20px;
-
   padding: 3px 10px;
   color: $main-color-dark;
 }
