--- a/src/scss/revolutionary-editor.scss
+++ b/src/scss/revolutionary-editor.scss
@@ -14,18 +14,16 @@
 .revolutionary-editor__title {
   font-weight: 700;
   font-size: 54px;
-  line-height: 54px;
+  line-height: 1;
   text-transform: uppercase;
   color: $main-color-purple-dark;
   margin-top: 0;
   margin-bottom: 35px;
-  @media (max-width: 480px) {
-    font-size: 26px;
-    line-height: 28px;
-  }
   @media (max-width: 992px){
     font-size: 42px;
-    line-height: 42px;
+  }
+  @media (max-width: 480px) {
+    font-size: 26px;
   }
 }
 .revolutionary-editor__info {
